--- a/package.json
+++ b/package.json
@@ -9,15 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.113",
+    "@mui/material": "^5.11.1",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "gsap": "^3.11.4",
     "next": "13.1.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gsap": "^3.2.1",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.26"
   }
 }
