--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/aos": "^3.0.4",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
