--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "gsap": "^3.11.4",
     "next": "13.1.0",
     "next-redux-wrapper": "^8.0.0",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gsap": "^3.2.1",
