--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "framer-motion": "^8.0.2",
     "gsap": "^3.11.4",
     "next": "13.1.0",
     "next-redux-wrapper": "^8.0.0",
