--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export"
+    "deploy": "next build && next export",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -27,6 +28,7 @@
     "framer-motion": "^8.0.2",
     "next": "13.1.0",
     "next-redux-wrapper": "^8.0.0",
+    "next-sitemap": "^3.1.44",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
