--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@uiball/loaders": "^1.2.6",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
