--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.6",
