--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
+    "sharp": "^0.33.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
